fix(company-logos): fix size/distortion of company logos (#149)
fix #147

--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -364,6 +364,7 @@ section {
 		}
 
 		img {
+			width: 150px;
 			margin-right: 10px;
 			display: none;
 
